Replaced Deprecated React-native-camera library with React-native-vision-camera

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "12.1.1",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-vision-camera": "^2.15.2",
+    "react-native-webview": "^11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
