--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-image-picker": "^4.10.0",
-    "react-native-reanimated": "^2.11.0",
+    "react-native-reanimated": "2.10.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "^3.17.0",
     "react-native-svg": "12.1.1",
